--- a/views/includes/pagination.ejs
+++ b/views/includes/pagination.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/pagination.css">
+
 <section class="pagination">
     <% if (currentPage !== 1 && previousPage !== 1) { %>
         <a href="?page=1">1</a>
