--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -3,73 +3,61 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
-<body>
+<body style="background-image: linear-gradient(125deg, #2f1cbb, #114766);">
     <%- include('../includes/navigation.ejs') %>
-        <main>
-            <div>
-            <h1 class="match__title">Matches you created:</h1>    
+    <main>
+        <div>
+            <h1 class="match__title" style="color: white;">Matches you created:</h1>
             <% if (ms.length > 0) { %>
                 <div class="grid">
-                <% for (let match of ms) { %>
-                    <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
-                        <header class="card__header">
-                            <h1 class="match__title">
-                                <%= match.title %>
-                            </h1>
-                        </header>
-                        <div class="card__image">
-                            <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
-                        </div>
-                        <div class="card__content">
-                            <h2 class="match__place">
-                                <%= match.placeName %>
-                            </h2>
-                            <h2 class="match__place">
-                                <%= match.time.getDate().toString() + "-" + (match.time.getMonth()+1).toString() + "-" + match.time.getFullYear().toString() %>
-                            </h2>
-                        </div>
-                        <div class="card__actions">
-                            <a href="/edit-match/<%= match._id %>?edit=true" class="btn">Edit</a>
-                            <form action="/delete-match/" method="POST">
-                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                <input type="hidden" value="<%= match._id %>" name="matchId">
-                                <button class="btn" type="submit">Delete</button>
-                            </form>
-                        </div>
-                        <br>
-                    </article>
-                <% } %>
-                </div>
-            <% } else { %>
-                <div class="wrapper">
-                    <a href="/add-match" style="text-decoration: none">
-                        <h1 class="match__subtitle">You have not created any games yet!</h1>
-                    </a>
-                </div>
-            <% } %>
-            </div>
-            <hr>
-            <div>
-                <h1 class="match__title">Matches you joined:</h1>
-                <% if (jMatches.length > 0) { %>
-                    <div class="grid">
-                    <% for (let match of jMatches) { %>
-                        <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
+                    <% for (let match of ms) { %>
+                        <article class="card match-item" style="background-color: white;" onclick="location.assign('/matches/<%= match._id %>')">
                             <header class="card__header">
-                                <h1 class="match__title">
-                                    <%= match.title %>
-                                </h1>
+                                <h1 class="match__title"><%= match.title %></h1>
                             </header>
                             <div class="card__image">
                                 <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
                             </div>
                             <div class="card__content">
-                                <h2 class="match__place">
-                                    <%= match.placeName %>
-                                </h2>
-                                <h2 class="match__place">
-                                    <%= match.time.getDate().toString() + "-" + (match.time.getMonth()+1).toString() + "-" + match.time.getFullYear().toString() %>
-                                </h2>
+                                <h2 class="match__place"><%= match.placeName %></h2>
+                                <h2 class="match__place"><%= match.time.getDate().toString()+"-"+(match.time.getMonth()+1).toString()+"-"+ match.time.getFullYear().toString() %></h2>
+                            </div>
+                            <div class="card__actions">
+                                <a href="/edit-match/<%= match._id %>?edit=true" class="btn">Edit</a>
+                                <form action="/delete-match/" method="POST">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                    <input type="hidden" value="<%= match._id %>" name="matchId">
+                                    <button class="btn" type="submit">Delete</button>
+                                </form>
+                            </div>
+                            <br>
+                        </article>
+                    <% } %>
+                </div>
+            <% } else { %>
+                <div class="wrapper">
+                    <a href="/add-match" style="text-decoration: none">
+                        <h1 class="match__subtitle" style="color: white;">You have not created any games yet!</h1>
+                    </a>
+                </div>
+            <% } %>
+        </div>
+        <hr>
+        <div>
+            <h1 class="match__title" style="color: white;">Matches you joined:</h1>
+            <% if (jMatches.length > 0) { %>
+                <div class="grid">
+                    <% for (let match of jMatches) { %>
+                        <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
+                            <header class="card__header">
+                                <h1 class="match__title"><%= match.title %></h1>
+                            </header>
+                            <div class="card__image">
+                                <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+                            </div>
+                            <div class="card__content">
+                                <h2 class="match__place"><%= match.placeName %></h2>
+                                <h2 class="match__place"><%= match.time.getDate().toString()+"-"+(match.time.getMonth()+1).toString()+"-"+match.time.getFullYear().toString() %></h2>
                             </div>
                             <div class="card__actions">
                                 <a href="/matches/<%= match._id %>" class="btn" id="details">Details</a>
@@ -78,15 +66,15 @@
                             <br>
                         </article>
                     <% } %>
-                    </div>
-                <% } else { %>
-                    <div class="wrapper">
-                        <a href="/matches" style="text-decoration: none">
-                            <h1 class="match__subtitle">Join in a new match!</h1>
-                        </a>
-                    </div>
-                <% } %>
                 </div>
-        </main>
+            <% } else { %>
+                <div class="wrapper">
+                    <a href="/matches" style="text-decoration: none">
+                        <h1 class="match__subtitle">Join in a new match!</h1>
+                    </a>
+                </div>
+            <% } %>
+        </div>
+    </main>
         
 <%- include('../includes/end.ejs') %>
