--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -13,7 +13,7 @@
             <!-- Page content -->
             <div class="container-fluid mt--7">
                 <div class="row">
-                    <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
+                    <div class="col-xl-4 order-xl-1 mb-5 mb-xl-0">
                         <div class="card card-profile shadow">
                             <div class="row justify-content-center">
                                 <div class="col-lg-3 order-lg-2">
@@ -26,8 +26,16 @@
                             </div>
                             <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
                                 <div class="d-flex justify-content-between">
-                                    <a type="hidden"> </a>
-                                    <button class="btn btn-sm btn-primary" type="submit" onsubmit="">Edit</button>  <!-- TODO implementa modifca profilo -->
+                                    <form action="/myprofile/editprofile" method="POST">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                        <input type="hidden" value="<%= user._id %>" name="userId">
+                                        <button class="btn btn-sm btn-primary" type="submit">Edit</button> <!-- TODO implementa modifca profilo -->
+                                    </form>
+                                    <form action="/myprofile/editpass" method="POST">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                        <input type="hidden" value="<%= user._id %>" name="userId">
+                                        <button class="btn btn-sm btn-primary" type="submit">Modifica<br />Password</button> <!-- TODO implementa modifca password -->
+                                    </form>  
                                 </div>
                             </div>
                             <div class="card-body pt-0 pt-md-4">
@@ -50,7 +58,8 @@
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <h3><%= user.usrName %><span class="font-weight-light">, Età</span></h3>
+                                    <h3><%= user.usrName %></h3>
+                                    <h3><%= user.nome %> <%= user.cognome %><span class="font-weight-light">, Età</span></h3>
                                     <div class="h5 font-weight-300">
                                         <i class="ni location_pin mr-2"></i>Città, Nazione
                                     </div>
@@ -66,13 +75,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-8 order-xl-1">
+                    <!-- <div class="col-xl-8 order-xl-2 mb-5 mb-xl-0">
                         <div class="card bg-secondary shadow">
                             <div class="card-header bg-white border-0">
                                 <div class="row align-items-center">
                                     <div class="col-8"><h3 class="mb-0">My account</h3></div>
                                     <div class="col-4 text-right">
-                                        <a href="/myprofile/editpass" class="btn btn-sm btn-primary">Modifica Password</a>
+                                        <form action="/myprofile/editpass" method="POST">
+                                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                            <input type="hidden" value="<%= user._id %>" name="userId">
+                                            <button class="btn btn-sm btn-primary" type="submit">Modifica Password</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -99,7 +112,7 @@
                                 <hr class="my-4">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
