--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -15,7 +15,7 @@
 </script>
 
 <body>
-   <%- include('../includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
     <main>
         <% if (errorMessage) { %>
             <div class="flex-c-m">
@@ -26,7 +26,7 @@
             <div class="card">
                 <h2 class="card-heading">Edit this match!</h2>
                 <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_VB3ALHSv6V.json"  background="transparent"  speed="0.2"  style="width: auto; height: auto;"  loop  autoplay></lottie-player>
-                <form class="card-form" action="/<% if (editing) { %>edit-match<% } else { %>add-match<% } %>" method="POST">
+                <form class="card-form" action="/edit-match" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <input type="hidden" value="<%= match._id %>" name="matchId">
                     <div class="wrap-input100 validate-input m-b-23">
@@ -75,7 +75,7 @@
                         <input
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
                             value="<% if (editing || hasError) { %><%= match.price %><% } %>"
-                            type="number" name="price" id="price" step="0.50" required>
+                            type="number" name="price" id="price" step="0.10" required>
                         <span class="focus-input100" data-symbol="&#xf19a;"></span>
                     </div>
                     <div class="wrap-input100 validate-input m-b-23">
